# 8Knot

./: .dockerignore  .env.sample  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .spellcheck.yaml  .wordlist-md  .yamllint  AUTHORS.md  CI-TESTING-GUIDE.md  DEVELOPMENT_BUILD_GUIDE.md  Deliverable 1.txt  Dockerfile  Dockerfile.bak  Dockerfile.data_worker  Dockerfile.flower  Dockerfile.server  Dockerfile.supervisor_workers  Dockerfile.worker  LICENSE.md  NIGHTLY-DEPENDENCY-TESTING.md  PRODUCTION_GUIDELINES.md  Pipfile  README.md  REDIS_PRODUCTION.md  app.py  app_callbacks.py  app_global.py  app_layout.py  config.py  config_temp.json  contrib.md  docker-compose.dev.yml  docker-compose.yml  env.list  env.list.sample  figure_design.ipynb  final-project-requirements.md  index.py  index_callbacks.py  (+13 more)
.s2i/: environment
8Knot/: _bots.py  _celery.py  _login.py  _multiselect.py  app.py  entrypoint.sh  graphs.json  helpers.py  milvus.py  milvus_demo.db  models.py  prompt.md  prompt.txt  testing_utils.py  worker_settings.py
Sprints/: Sprint 1.docx  Sprint 2.docx
assets/: README.md  color.css  header.css  shimmer.css  shine.css
cache_manager/: cache_manager.py
data/: README.md
db_interface/: AugurInterface.py  __init__.py
db_manager/: AugurInterface.py  augur_manager.py
docker/: Dockerfile  Dockerfile.cache  Dockerfile.flower  Dockerfile.server  Dockerfile.supervisor_workers  Dockerfile.worker
docs/: AUGUR_INT.md  AUGUR_LOGIN.md  AUTHORS.md  CONTRIBUTORS.md  explorer_contributor_actions.sql  new_viz_guidance.md  user-accounts-in-8knot.md
openshift/: 8k-bc.yaml  (+5 more)
(+376 files in other folders)
