[project]
name = "8Knot"
version = "0.1.0"
description = "Dash app built by Red Hat's Open Source Program Office to analyze community and contribution data for git repositories"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery==5.3.6",
    "dash~=3.2.0",
    "dash-bootstrap-components~=2.0",
    "dash-bootstrap-templates==1.3.0",
    "dash-mantine-components~=2.2",
    "flask~=3.1",
    "flask-login~=0.6",
    "gunicorn~=23.0",
    "numpy~=2.0",
    "pandas~=2.3.0",
    "plotly~=6.3",
    "psycopg2-binary==2.9.9",
    "pyarrow~=16.0",
    "python-dateutil~=2.9",
    "rapidfuzz~=3.13",
    "redis~=6.4",
    "sqlalchemy==2.0.25",
]
